--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -192,3 +192,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/ProdigyProject.ProdigyItemDefinition",NewName="/Script/ProdigyProject.ProdigyItemDefinition")
