--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -196,4 +196,6 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/ProdigyProject.ProdigyItemDefinition",NewName="/Script/ProdigyProject.ProdigyItemDefinition")
++PropertyRedirects=(OldName="/Script/ProdigyProject.QuestLogEntryView.CurrentObjectiveProgress",NewName="/Script/ProdigyProject.QuestLogEntryView.ObjectiveProgress")
++PropertyRedirects=(OldName="/Script/ProdigyProject.QuestLogEntryView.CurrentObjectives",NewName="/Script/ProdigyProject.QuestLogEntryView.Objectives")
 
