--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,6 @@
 ProjectID=58BCA0334E38ADF374CE26881151F262
 ProjectName=Top Down BP Game Template
 
+[/Script/ProdigyProject.ActionCueSettings]
+GlobalCueSet=/Game/TopDown/Blueprints/Data/DA_ActionCueSet.DA_ActionCueSet
+
